--- a/interior_reimaginer/requirements.txt
+++ b/interior_reimaginer/requirements.txt
@@ -2,6 +2,8 @@ torch>=2.0.0
 torchvision>=0.15.0
 diffusers>=0.14.0
 transformers>=4.28.0
+timm>=0.6.13
+gdown>=4.7.1
 gradio>=3.32.0
 opencv-python>=4.7.0
 Pillow>=9.5.0
