--- a/interior_reimaginer/requirements.txt
+++ b/interior_reimaginer/requirements.txt
@@ -17,3 +17,4 @@ open3d>=0.16.0
 matplotlib>=3.6.0
 plotly>=5.14.0
 kaleido>=0.2.1
+scipy>=1.10.0  # Required for Delaunay triangulation and grid interpolation
